manifests/kier/dns.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns
  namespace: kier
  labels:
    app: dns
spec:
  selector:
    matchLabels:
      app: dns
  template:
    metadata:
      labels:
        app: dns
    spec:
      containers:
      - name: dns
        image: coredns/coredns
        args:
        - -conf
        - /etc/coredns/Corefile
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /etc/coredns
          readOnly: true
        # livenessProbe:
        #   httpGet:
        #     port: 8080
        #     scheme: HTTP
        #     path: /health
        #   initialDelaySeconds: 10
        #   periodSeconds: 30
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        # readinessProbe:
        #   httpGet:
        #     port: 8181
        #     scheme: HTTP
        #     path: /ready
        #   initialDelaySeconds: 10
        #   periodSeconds: 30
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
      volumes:
      - name: config
        configMap:
          name: dns

---

apiVersion: v1
kind: Service
metadata:
  name: dns
  namespace: kier
  labels:
    app: dns
spec:
  selector:
    app: dns
  clusterIP: 10.96.1.0
  ports:
  - name: dns-tcp
    port: 53
    targetPort: dns-tcp
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: dns-udp
    protocol: UDP
