manifests/kier/factorio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio
  namespace: kier
  labels:
    app: factorio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorio
  template:
    metadata:
      labels:
        app: factorio
    spec:
      nodeSelector:  # remove when no longer dependent on /home/k8s
        kubernetes.io/hostname: beagle2
      containers:
      - name: factorio
        image: factoriotools/factorio:stable
        ports:
        - name: factorio
          containerPort: 34197
          protocol: UDP
        - name: rcon
          containerPort: 27015
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /factorio
      volumes:
      - name: data
        hostPath:
          path: /home/k8s/kier/factorio

---

apiVersion: v1
kind: Service
metadata:
  name: factorio
  namespace: kier
  labels:
    app: factorio
spec:
  type: NodePort
  selector:
    app: factorio
  ports:
  - name: factorio
    port: 34197
    targetPort: factorio
    nodePort: 30003
    protocol: UDP

---

apiVersion: v1
kind: Service
metadata:
  name: factorio-rcon
  namespace: kier
  labels:
    app: factorio
spec:
  selector:
    app: factorio
  ports:
  - name: rcon
    port: 27015
    targetPort: rcon
    protocol: TCP
