manifests/kier/git-server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-server
  namespace: kier
  labels:
    app: git-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: git-server
  template:
    metadata:
      labels:
        app: git-server
    spec:
      containers:
      - name: git-server
        image: kierdavis/git-server-docker:latest
        imagePullPolicy: Always
        ports:
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: keys
          mountPath: /git-server/keys
        - name: repos
          mountPath: /git-server/repos
      volumes:
      - name: keys
        configMap:
          name: git-server-keys
      - name: repos
        hostPath:
          path: /home/k8s/kier/git-repos

---

apiVersion: v1
kind: Service
metadata:
  name: git-server
  namespace: kier
  labels:
    app: git-server
spec:
  selector:
    app: git-server
  ports:
  - name: ssh
    port: 22
    targetPort: ssh
    protocol: TCP
