manifests/kier/openttd.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: openttd
  namespace: kier
  labels:
    app: openttd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openttd
  template:
    metadata:
      labels:
        app: openttd
    spec:
      containers:
      - name: openttd
        image: redditopenttd/openttd:latest
        ports:
        - name: openttd-tcp
          containerPort: 3979
          protocol: TCP
        - name: openttd-udp
          containerPort: 3979
          protocol: UDP
        volumeMounts:
        - name: data
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: openttd

---

apiVersion: v1
kind: Service
metadata:
  name: openttd
  namespace: kier
  labels:
    app: openttd
spec:
  type: NodePort
  selector:
    app: openttd
  ports:
  - name: openttd-tcp
    port: 3979
    targetPort: openttd-tcp
    nodePort: 30004
    protocol: TCP
  - name: openttd-udp
    port: 3979
    targetPort: openttd-udp
    nodePort: 30004
    protocol: UDP
