manifests/kier/vpn-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-server
  namespace: kier
  labels:
    app: vpn-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-server
  template:
    metadata:
      labels:
        app: vpn-server
    spec:
      containers:
      - name: vpn-server
        image: cmulk/wireguard-docker:stretch
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - SYS_MODULE
        volumeMounts:
        - name: config
          mountPath: /etc/wireguard
        ports:
        - name: wireguard
          containerPort: 5555
          protocol: UDP
      volumes:
      - name: config
        secret:
          secretName: vpn-server-config

---

apiVersion: v1
kind: Service
metadata:
  name: vpn-server
  namespace: kier
  labels:
    app: vpn-server
spec:
  selector:
    app: vpn-server
  ports:
  - name: wireguard
    port: 5555
    targetPort: wireguard
    protocol: UDP
