manifests/kier/mstream.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mstream
  namespace: kier
  labels:
    app: mstream
spec:
  replicas: 1
  strategy:
    type: Recreate  # delete the old pod before creating the new one, since two pods can't mount mstream-cache at once
  selector:
    matchLabels:
      app: mstream
  template:
    metadata:
      labels:
        app: mstream
    spec:
      nodeSelector:  # remove when no longer dependent on /home/k8s
        kubernetes.io/hostname: beagle2
      containers:
      - name: mstream
        image: linuxserver/mstream:amd64-latest
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /config
        - name: music
          mountPath: /music
          readOnly: true
        - name: cache
          mountPath: /cache
      volumes:
      - name: config-template
        configMap:
          name: mstream-config-template
      - name: config
        emptyDir: {}
      - name: music
        hostPath:
          path: /home/k8s/kier/music
      - name: cache
        persistentVolumeClaim:
          claimName: mstream-cache

---

apiVersion: v1
kind: Service
metadata:
  name: mstream
  namespace: kier
  labels:
    app: mstream
spec:
  selector:
    app: mstream
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mstream
  namespace: kier
  labels:
    app: mstream
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: mstream.kierdavis.com
    http:
      paths:
      - backend:
          serviceName: mstream
          servicePort: http
  tls:
  - hosts:
    - mstream.kierdavis.com
    secretName: mstream-tls
