manifests/kier/polaris.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris
  namespace: kier
  labels:
    app: polaris
spec:
  replicas: 1
  strategy:
    type: Recreate  # delete the old pod before creating the new one, since two pods can't mount mstream-cache at once
  selector:
    matchLabels:
      app: polaris
  template:
    metadata:
      labels:
        app: polaris
    spec:
      nodeSelector:  # remove when no longer dependent on /home/k8s
        kubernetes.io/hostname: beagle2
      containers:
      - name: polaris
        image: kierdavis/docker-polaris:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5050
        volumeMounts:
        - name: music
          mountPath: /music
          readOnly: true
        - name: cache
          mountPath: /var/lib/polaris
      volumes:
      - name: music
        hostPath:
          path: /home/k8s/kier/music
      - name: cache
        persistentVolumeClaim:
          claimName: polaris-cache

---

apiVersion: v1
kind: Service
metadata:
  name: polaris
  namespace: kier
  labels:
    app: polaris
spec:
  selector:
    app: polaris
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: polaris
  namespace: kier
  labels:
    app: polaris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: polaris.kierdavis.com
    http:
      paths:
      - backend:
          serviceName: polaris
          servicePort: http
  tls:
  - hosts:
    - polaris.kierdavis.com
    secretName: polaris-tls
