manifests/kier/static-websites.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-websites
  namespace: kier
  labels:
    app: static-websites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-websites
  template:
    metadata:
      labels:
        app: static-websites
    spec:
      nodeSelector:  # remove when no longer dependent on /var/www
        kubernetes.io/hostname: beagle2
      containers:
      - name: static-websites
        image: nginx
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: content
          mountPath: /var/www
          readOnly: true
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
          readOnly: true
      volumes:
      - name: content
        hostPath:
          path: /var/www
      - name: nginx-config
        configMap:
          name: static-websites-nginx-config

---

apiVersion: v1
kind: Service
metadata:
  name: static-websites
  namespace: kier
  labels:
    app: static-websites
spec:
  selector:
    app: static-websites
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: static-websites
  namespace: kier
  labels:
    app: static-websites
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: kierdavis.com
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: newlinenew.life
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  - host: new.line-new.life
    http:
      paths:
      - backend:
          serviceName: static-websites
          servicePort: http
  tls:
  - hosts:
    - kierdavis.com
    secretName: static-websites-tls-kierdavis-com
  - hosts:
    - newlinenew.life
    secretName: static-websites-tls-newlinenew-life
  - hosts:
    - new.line-new.life
    secretName: static-websites-tls-new-line-new-life
