manifests/kier/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: kier
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: kierdavis/site:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: kier
  labels:
    app: website
spec:
  selector:
    app: website
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: website
  namespace: kier
  labels:
    app: website
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: kierdavis.com
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: http
  - host: newlinenew.life
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: http
  - host: new.line-new.life
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: http
  tls:
  - hosts:
    - kierdavis.com
    secretName: website-tls-kierdavis-com
  - hosts:
    - newlinenew.life
    secretName: website-tls-newlinenew-life
  - hosts:
    - new.line-new.life
    secretName: website-tls-new-line-new-life
